﻿shmuel 04.12.2014 20:53:25 +0200 - build 4206

1. Уточнение 3680.

w17 03.12.2014 14:41:20 +0300 - build 4205

1. M#2211: GUI context menu cannot be closed by pressing Esc button
   EMenu вызывается при отпускании кнопки

zg 03.12.2014 03:56:49 +0200 - build 4204

1. экспериментально. продолжение 4203. поддержка колонок C1-C9.

zg 30.11.2014 11:55:22 +0200 - build 4203

1. при переключении из режима без кастом колонки в режим с кастом колонкой в ней ничего не отображалось.

2. экспериментально. постобработка данных, возвращаемых плагинами для кастом колонки, при помощи плагина LuaMacro.

zg 29.11.2014 02:37:27 +0200 - build 4202

1. уточнение 4137.

zg 20.11.2014 16:25:43 +0200 - build 4201

1. фар падал, если плагин в KeyBarLabel.Text возвращал nullptr.

zg 20.11.2014 13:22:03 +0200 - build 4200

1. уточнение 4197.

zg 20.11.2014 04:03:52 +0200 - build 4199

1. уточнение 4197: не обновляем плагиновые панели.

zg 20.11.2014 03:14:13 +0200 - build 4198

1. уточнение 4197.

zg 20.11.2014 03:03:40 +0200 - build 4197

1. иногда панели перечитывались, но не перерисовывались.

drkns 20.11.2014 01:07:04 +0200 - build 4196

1. Измененён способ расчёта цвета текста в панелях, по мотивам http://forum.farmanager.com/viewtopic.php?p=125730.

zg 20.11.2014 00:43:18 +0200 - build 4195

1. поиск в файлах по содержимому искал только в первых 32 килобайтах.

svs 19.11.2014 14:51:39 +0300 - build 4194

1. SQLite 3.8.7.2

drkns 16.11.2014 23:30:38 +0200 - build 4193

1. Пара мелочей.

drkns 16.11.2014 17:10:47 +0200 - build 4192

1. DWORD -> size_t mix.

drkns 16.11.2014 15:04:03 +0200 - build 4191

1. С форума: msgbox('""','""') не выводит кавычки

2. Рефакторинг.

shmuel 14.11.2014 14:32:36 +0200 - build 4190

1. mf.waitkey неправильно работала, будучи вызвана не из макроса.

drkns 12.11.2014 23:34:04 +0200 - build 4189

1. Не скрываем размеры для любых типов reparse point'ов.

w17 12.11.2014 17:19:14 +0300 - build 4188

1. Уточнение 4174.3
