@@ -555,20 +555,20 @@ static struct list_less
 				break;
 
 			case BY_CUSTOMDATA:
-				if (a.CustomData[0].empty())
+				if (a.strCustomData.empty())
 				{
-					if (b.CustomData[0].empty())
+					if (b.strCustomData.empty())
 						break;
 					else
 						return less_opt(false);
 				}
 
-				if (b.CustomData[0].empty())
+				if (b.strCustomData.empty())
 					return less_opt(true);
 
 				{
 					auto Comparer = ListNumericSort? (ListCaseSensitiveSort? NumStrCmpC : NumStrCmpI) : (ListCaseSensitiveSort? StrCmpC : ::StrCmpI);
-					RetCode = Comparer(a.CustomData[0].data(), b.CustomData[0].data());
+					RetCode = Comparer(a.strCustomData.data(), b.strCustomData.data());
 				}
 				if (RetCode)
 					return less_opt(RetCode < 0);
@@ -3196,7 +3196,7 @@ void FileList::SetViewMode(int Mode)
 	bool OldNumLink=IsColumnDisplayed(NUMLINK_COLUMN);
 	bool OldNumStreams=IsColumnDisplayed(NUMSTREAMS_COLUMN);
 	bool OldStreamsSize=IsColumnDisplayed(STREAMSSIZE_COLUMN);
-	bool OldCustomData=IsColumnDisplayed(CUSTOM_COLUMN0, CUSTOM_COLUMN9);
+	bool OldCustomData=IsColumnDisplayed(CUSTOM_COLUMN0);
 	bool OldDiz=IsColumnDisplayed(DIZ_COLUMN);
 	PrepareViewSettings(Mode,nullptr);
 	bool NewOwner=IsColumnDisplayed(OWNER_COLUMN);
@@ -3204,7 +3204,7 @@ void FileList::SetViewMode(int Mode)
 	bool NewNumLink=IsColumnDisplayed(NUMLINK_COLUMN);
 	bool NewNumStreams=IsColumnDisplayed(NUMSTREAMS_COLUMN);
 	bool NewStreamsSize=IsColumnDisplayed(STREAMSSIZE_COLUMN);
-	bool NewCustomData=IsColumnDisplayed(CUSTOM_COLUMN0, CUSTOM_COLUMN9);
+	bool NewCustomData=IsColumnDisplayed(CUSTOM_COLUMN0);
 	bool NewDiz=IsColumnDisplayed(DIZ_COLUMN);
 	bool NewAccessTime=IsColumnDisplayed(ADATE_COLUMN);
 	int ResortRequired=FALSE;
@@ -3571,7 +3571,7 @@ bool FileList::GetPlainString(string& Dest, int ListPos) const
 
 				if (!ColumnData)
 				{
-					ColumnData=m_ListData[ListPos].CustomData[ColumnNumber];//L"";
+					ColumnData=m_ListData[ListPos].strCustomData;//L"";
 				}
 				Dest.append(ColumnData);
 			}
@@ -6682,7 +6682,7 @@ void FileList::ReadFileNames(int KeepSelection, int UpdateEvenIfPanelInvisible, 
 	api::enum_file Find(strFind, true);
 	DWORD FindErrorCode = ERROR_SUCCESS;
 	bool UseFilter=m_Filter->IsEnabledOnPanel();
-	bool ReadCustomData=IsColumnDisplayed(CUSTOM_COLUMN0, CUSTOM_COLUMN9);
+	bool ReadCustomData=IsColumnDisplayed(CUSTOM_COLUMN0);
 
 	DWORD StartTime = GetTickCount();
 
@@ -6745,7 +6745,7 @@ void FileList::ReadFileNames(int KeepSelection, int UpdateEvenIfPanelInvisible, 
 			}
 
 			if (ReadCustomData)
-				NewItem.CustomData = Global->CtrlObject->Plugins->GetCustomData(NewItem.strName);
+				NewItem.strCustomData = Global->CtrlObject->Plugins->GetCustomData(NewItem.strName);
 
 			if (!(fdata.dwFileAttributes & FILE_ATTRIBUTE_DIRECTORY))
 				TotalFileCount++;
@@ -8297,7 +8297,7 @@ void FileList::ShowList(int ShowStatus,int StartColumn)
 
 					if (!ColumnData)
 					{
-						ColumnData=m_ListData[ListPos].CustomData[ColumnNumber].data();//L"";
+						ColumnData=m_ListData[ListPos].strCustomData.data();//L"";
 					}
 
 					int CurLeftPos=0;
@@ -8717,9 +8717,4 @@ bool FileList::IsColumnDisplayed(std::function<bool(const column&)> Compare)
 bool FileList::IsColumnDisplayed(int Type)
 {
 	return IsColumnDisplayed([&Type](const column& i) {return static_cast<int>(i.type & 0xff) == Type;});
-}
-
-bool FileList::IsColumnDisplayed(int From, int To)
-{
-	return IsColumnDisplayed([&From,&To](const column& i)->bool {int type=static_cast<int>(i.type & 0xff); return type >= From && type <= To;});
 }
