@@ -2366,12 +2366,11 @@ PluginHandle* PluginManager::Open(Plugin *pPlugin,int OpenFrom,const GUID& Guid,
 	return nullptr;
 }
 
-std::array<string,10> PluginManager::GetCustomData(const string& Name) const
+string PluginManager::GetCustomData(const string& Name) const
 {
 	const NTPath FilePath(Name);
 
-	std::list<std::pair<GUID,string>> allCustomData;
-	std::array<string,10> CustomData;
+	string strCustomData;
 
 	std::for_each(CONST_RANGE(SortedPlugins, i)
 	{
@@ -2379,44 +2378,15 @@ std::array<string,10> PluginManager::GetCustomData(const string& Name) const
 
 		if (i->HasGetCustomData() && i->GetCustomData(FilePath.data(), &CustomData))
 		{
-			allCustomData.emplace_back(VALUE_TYPE(allCustomData)(i->GetGUID(), CustomData));
+			if (!strCustomData.empty())
+				strCustomData += L" ";
+			strCustomData += CustomData;
 
 			if (i->HasFreeCustomData())
 				i->FreeCustomData(CustomData);
 		}
 	});
-	if (!allCustomData.empty())
-	{
-		std::vector<FarMacroValue> values;
-		values.reserve(allCustomData.size()*2+1);
-		std::for_each(CONST_RANGE(allCustomData, i)
-		{
-			values.emplace_back(i.first);
-			values.emplace_back(i.second);
-		});
-		values.emplace_back(FilePath);
-		FarMacroCall fmc={sizeof(FarMacroCall),values.size(),&values[0],nullptr,nullptr};
-		OpenMacroPluginInfo info={MCT_CUSTOMDATA,&fmc};
-		void *ptr;
-		if (Global->CtrlObject->Plugins->CallPlugin(Global->Opt->KnownIDs.Luamacro.Id, OPEN_LUAMACRO, &info, &ptr) && ptr)
-		{
-			size_t count=std::min(info.Ret.Count,static_cast<size_t>(10));
-			for(size_t ii=0;ii<count;++ii)
-			{
-				if (FMVT_STRING==info.Ret.Values[ii].Type) CustomData[ii] = info.Ret.Values[ii].String;
-			}
-		}
-		else
-		{
-			std::for_each(CONST_RANGE(allCustomData, i)
-			{
-				if (!CustomData[0].empty())
-					CustomData[0] += L" ";
-				CustomData[0] += i.second;
-			});
-		}
-	}
-	return CustomData;
+	return strCustomData;
 }
 
 const GUID& PluginManager::GetGUID(const PluginHandle* hPlugin)
