@@ -1,4 +1,8 @@
-﻿shmuel 04.12.2014 20:53:25 +0200 - build 4206
+﻿zg 06.12.2014 01:05:54 +0200 - build 4207
+
+1. откат 4203.2, 4204.
+
+shmuel 04.12.2014 20:53:25 +0200 - build 4206
 
 1. Уточнение 3680.
 
